# Python_IITP_RAS

./: .gitignore  LICENSE  README.md  interpolation.ipynb  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
docs/source/: cli.md  conf.py  index.md  interpolation.md  methods.md  performance.md
example/: console.py
interpolation/: README.md  interpolation.py  methods.py  pyproject.toml
interpolation/demo/: console.py
interpolation/interpolation/: interpolation.py
interpolation/tests/: tests.py
plots/: performance.py
tests/: methods.py  test_interpolation.py  tests.py
