[project]
name = "interpolation"
version = "0.1.0"
description = "IITP RAS Python class"
authors = [
    {name = "Andrey Kirkicha",email = "kirkicha.aa@phystech.edu"}
]
homepage = "https://github.com/andreykirkicha/Python_IITP_RAS.git"
repository = "https://github.com/andreykirkicha/Python_IITP_RAS.git"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "ruff (>=0.11.0,<0.12.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
demo = "interpolation.demo.console:demo"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM", "I"]
ignore = ["F401"]
fixable = ["ALL"]
unfixable = []

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

